--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 }
 body{
     background: #543855;
+    overflow: hidden;
 }
 
 section{
@@ -46,8 +47,6 @@ header h2{
 
 .carrousel{
     width: 100%;
-    margin-top: -4em;
-    margin-bottom: -2em;
     z-index: -999999999999;
 }
 .apresentation{
